--- a/LearnStream/frontend/src/App.css
+++ b/LearnStream/frontend/src/App.css
@@ -10,4 +10,7 @@
   .custom-scrollbar::-webkit-scrollbar-track {
     background-color: #f3f4f6; /* Light gray */
   }
-  
+  /* body {
+    background: linear-gradient(to bottom, rgb(178, 248, 178), white);
+    min-height: 100vh;
+  } */
